--- a/yamtl.cafev.stats/build.gradle
+++ b/yamtl.cafev.stats/build.gradle
@@ -63,6 +63,8 @@ dependencies {
 	implementation "org.eclipse.xtend:org.eclipse.xtend.core:$xtendVersion"
 	implementation "org.eclipse.xtend:org.eclipse.xtend.lib:$xtendVersion"
 	implementation "org.eclipse.emf:org.eclipse.emf.ecore.change:$emfChangeVersion"
-	implementation "yamtl:yamtl:0.2.5"
+	implementation "yamtl:yamtl:0.2.6"
+	implementation 'org.apache.commons:commons-math3:3.6.1'
+	implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.13.0"
 }
 
