--- a/cafev.vform.parent/cafev.vform/build.gradle
+++ b/cafev.vform.parent/cafev.vform/build.gradle
@@ -1,3 +1,35 @@
+repositories {
+	maven {
+		url "https://github.com/yamtl/yamtl.github.io/raw/mvn-repo/mvn-repo/snapshot-repo"
+	}
+	mavenCentral()
+}
+
+ext {
+	xtendVersion = '2.28.0'
+	emfChangeVersion = '2.14.0'
+}
+
+xtend {
+	sourceSets {
+		main.xtendOutputDir = 'src/main/xtend-gen'
+		test.xtendOutputDir = 'src/test/xtend-gen'
+	}
+}
+
+sourceSets {
+	main {
+		java {
+			srcDirs = [
+				'src/main/java',
+				'src/main/emf-gen',
+				'src/main/xtend-gen'
+			]
+		}
+	}
+}
+
+
 dependencies {
 	testImplementation 'org.junit.jupiter:junit-jupiter-api'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
@@ -5,6 +37,12 @@ dependencies {
 	testImplementation "org.eclipse.xtext:org.eclipse.xtext.xbase.testing:${xtextVersion}"
 	api "org.eclipse.xtext:org.eclipse.xtext:${xtextVersion}"
 	api "org.eclipse.xtext:org.eclipse.xtext.xbase:${xtextVersion}"
+	implementation "org.eclipse.xtend:org.eclipse.xtend.core:$xtendVersion"
+	implementation "org.eclipse.xtend:org.eclipse.xtend.lib:$xtendVersion"
+	implementation "org.eclipse.emf:org.eclipse.emf.ecore.change:$emfChangeVersion"
+	implementation "yamtl:yamtl:0.2.6"
+	implementation 'org.apache.commons:commons-math3:3.6.1'
+	implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.13.0"
 }
 configurations {
 	mwe2 {
