--- a/cafev.vform.parent/cafev.vform/build.gradle
+++ b/cafev.vform.parent/cafev.vform/build.gradle
@@ -2,6 +2,7 @@ repositories {
 	maven {
 		url "https://github.com/yamtl/yamtl.github.io/raw/mvn-repo/mvn-repo/snapshot-repo"
 	}
+	mavenLocal()
 	mavenCentral()
 }
 
@@ -40,9 +41,10 @@ dependencies {
 	implementation "org.eclipse.xtend:org.eclipse.xtend.core:$xtendVersion"
 	implementation "org.eclipse.xtend:org.eclipse.xtend.lib:$xtendVersion"
 	implementation "org.eclipse.emf:org.eclipse.emf.ecore.change:$emfChangeVersion"
-	implementation "yamtl:yamtl:0.2.6"
+	implementation "yamtl:yamtl:0.2.7"
 	implementation 'org.apache.commons:commons-math3:3.6.1'
 	implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.13.0"
+	implementation "org.apache.groovy:groovy-all:4.0.6"
 }
 configurations {
 	mwe2 {
