Upgraded to YAMTL 0.3.1
* Support for untyped model
* Support for lazy rules with arguments

--- a/BackEnd/cafev.vform.parent/.gitignore
+++ b/BackEnd/cafev.vform.parent/.gitignore
@@ -1,7 +1,7 @@
 **/.classpath
 **/.project
-**/.gradle
-**/.settings
+**/.gradle/
+**/.settings/
 **/.launch
-**/bin
-**/xtend-gen
+**/bin/
+**/xtend-gen/
